tests/cases/vectors/errors/vector-method-known-empty-pop.ari
fn main() -> i64 {
    var values: Vec[i64] = [];
    return values.pop();
}
